--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,18 @@
 /target
 /classes
 /checkouts
-/work
+profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
 *.class
 /.lein-*
 /.nrepl-port
-/.idea
-/*.iml
-/*.ipr
-/*.iws
+.hgignore
+.hg/
+*.iml
+*.iws
+*.ipr
 .DS_Store
+/vendor
+.eastwood
